tests/errors/macro/parser_include_need_filename/without_begin_quote.c
#include filename"

int main()
{
	return 0;
}
